--- a/styles/main.less
+++ b/styles/main.less
@@ -510,7 +510,7 @@ input.md-input, textarea.md-input {
 }
 
 ul.ivh-treeview {
-  padding-left: 40px;
+  padding-left: 40px !important;
 }
 
 li.ivh-treeview-node {
