--- a/styles/main.less
+++ b/styles/main.less
@@ -527,6 +527,6 @@ li.ivh-treeview-node {
 }
 
 ul.ivh-treeview .ivh-treeview-node-leaf .ivh-treeview-toggle {
-  padding: 0 5px;
+  //padding: 0 5px;
 }
 
