--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -33,8 +33,9 @@
             <!--right to left TreeView-->
             <div ng-if="lang=='fa'" ng-class="{'ltr' : lang=='en'}">
                 <div ivh-treeview="items"
-                     ivh-treeview-twistie-expanded-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_expand_more_black_24px.svg\'></md-icon>'"
-                     ivh-treeview-twistie-collapsed-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_chevron_left_black_24px.svg\'></md-icon>'"
+                     ivh-treeview-twistie-expanded-tpl="'<md-icon class=\'fa fa-minus\'></md-icon>'"
+                     ivh-treeview-twistie-collapsed-tpl="'<md-icon class=\'fa fa-plus\'></md-icon>'"
+                     ivh-treeview-twistie-leaf-tpl="'<md-icon class=\'fa fa-minus\'></md-icon>'"
                      ivh-treeview-use-checkboxes="false"
                      ivh-treeview-expand-to-depth="1">
                     <script type="text/ng-template">
@@ -52,8 +53,9 @@
             <!--left to right TreeView-->
             <div ng-if="lang=='en'" ng-class="{'ltr' : lang=='en'}">
                 <div ivh-treeview="items"
-                     ivh-treeview-twistie-expanded-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_expand_more_black_24px.svg\'></md-icon>'"
-                     ivh-treeview-twistie-collapsed-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_chevron_right_black_24px.svg\'></md-icon>'"
+                     ivh-treeview-twistie-expanded-tpl="'<md-icon class=\'fa fa-minus\'></md-icon>'"
+                     ivh-treeview-twistie-collapsed-tpl="'<md-icon class=\'fa fa-plus\'></md-icon>'"
+                     ivh-treeview-twistie-leaf-tpl="'<md-icon class=\'fa fa-minus\'></md-icon>'"
                      ivh-treeview-use-checkboxes="false"
                      ivh-treeview-expand-to-depth="1">
                     <script type="text/ng-template">
