--- a/templates/ontology/property.html
+++ b/templates/ontology/property.html
@@ -68,6 +68,14 @@
                 </tr>
                 <tr>
                     <td class="left">
+                        <h3>محدوده : </h3>
+                    </td>
+                    <td>
+                        <div ng-repeat="r in data.property.ranges track by $index">{{r}}</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="left">
                         <h3>دامنه پیشنهادی : </h3>
                     </td>
                     <td>
@@ -76,16 +84,7 @@
                             <a ui-sref="ontology.class({classUrl:d})">{{d}}</a>
                         </div>
                     </td>
-                </tr>
-                <tr>
-                    <td class="left">
-                        <h3>محدوده : </h3>
-                    </td>
-                    <td>
-                        <div ng-repeat="r in data.property.ranges track by $index">{{r}}</div>
-                    </td>
-                </tr>
-                <tr>
+                </tr>                <tr>
                     <td class="left">
                         <h3>محدوده پیشنهادی : </h3>
                     </td>
@@ -116,7 +115,7 @@
                         <h3>برگرفته شده از : </h3>
                     </td>
                     <td>
-                        <span>{{data.property.wasDerivedFrom}}</span>
+                        <a target="_blank" href="{{data.property.wasDerivedFrom}}">{{data.property.wasDerivedFrom}}</a>
                     </td>
                 </tr>
             </table>
