--- a/templates/mappings/template.html
+++ b/templates/mappings/template.html
@@ -4,7 +4,7 @@
     <div layout-gt-md="row" layout-xs="column">
         <div layout="row">
             <md-input-container>
-                <label>الگو : </label>
+                <label>الگوی ویکی‌پدیا : </label>
                 <input type="text" ng-model="query.templateName"/>
             </md-input-container>
             <div layout="row" layout-align="right center" flex>
@@ -14,7 +14,7 @@
             </div>
 
             <md-input-container>
-                <label>کلاس : </label>
+                <label>کلاس هستان‌شناسی: </label>
                 <input type="text" ng-model="query.className"/>
             </md-input-container>
             <div layout="row" layout-align="right center" flex>
@@ -26,7 +26,7 @@
 
         <div layout="row">
             <md-input-container>
-                <label>خصیصه : </label>
+                <label>خصیصه ویکی‌پدیا : </label>
                 <input type="text" ng-model="query.propertyName"/>
             </md-input-container>
             <div layout="row" layout-align="right center" flex>
@@ -36,7 +36,7 @@
             </div>
 
             <md-input-container>
-                <label>predicate</label>
+                <label>گزاره هستان‌شناسی</label>
                 <input type="text" ng-model="query.predicateName"/>
             </md-input-container>
             <div layout="row" layout-align="right center" flex>
