--- a/styles/main.less
+++ b/styles/main.less
@@ -98,6 +98,11 @@ table.simple {
       outline: none;
     }
 
+    td.label {
+      text-align: left;
+      white-space: nowrap;
+    }
+
     tr {
       .transition(background-color .5s);
     }
