search feedback #2 better UI, Sahel font

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -26,6 +26,24 @@
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
   font-weight: bold;
 }
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel.eot');
+  src: url('fonts/SahelFonts/Sahel.eot?#iefix') format('embedded-opentype'), url('fonts/SahelFonts/Sahel.woff') format('woff'), url('fonts/SahelFonts/Sahel.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel-Bold.eot');
+  src: url('fonts/SahelFonts/Sahel-Bold.eot?#iefix') format('embedded-opentype'), url('fonts/SahelFonts/Sahel-Bold.woff') format('woff'), url('fonts/SahelFonts/Sahel-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel-Black.eot');
+  src: url('fonts/SahelFonts/Sahel-Black.eot?#iefix') format('embedded-opentype'), url('fonts/SahelFonts/Sahel-Black.woff') format('woff'), url('fonts/SahelFonts/Sahel-MedBlackium.ttf') format('truetype');
+  font-weight: 900;
+}
 .fontDroidArabicKufi {
   font-family: DroidArabicKufi !important;
 }
@@ -40,4 +58,13 @@
 }
 .fontIRANSans-web {
   font-family: IRANSans-web !important;
+}
+.fontSahel {
+  font-family: Sahel !important;
+}
+.fs-14x {
+  font-size: 14px;
+}
+.fs-16x {
+  font-size: 16px;
 }
