--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -30,6 +30,33 @@
   font-weight: bold;
 }
 
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel.eot');
+  src: url('fonts/SahelFonts/Sahel.eot?#iefix') format('embedded-opentype'),
+  url('fonts/SahelFonts/Sahel.woff') format('woff'),
+  url('fonts/SahelFonts/Sahel.ttf') format('truetype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel-Bold.eot');
+  src: url('fonts/SahelFonts/Sahel-Bold.eot?#iefix') format('embedded-opentype'),
+  url('fonts/SahelFonts/Sahel-Bold.woff') format('woff'),
+  url('fonts/SahelFonts/Sahel-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel-Black.eot');
+  src: url('fonts/SahelFonts/Sahel-Black.eot?#iefix') format('embedded-opentype'),
+  url('fonts/SahelFonts/Sahel-Black.woff') format('woff'),
+  url('fonts/SahelFonts/Sahel-MedBlackium.ttf') format('truetype');
+  font-weight: 900;
+}
+
 .fontDroidArabicKufi {
   font-family: DroidArabicKufi !important;
 }
@@ -48,4 +75,17 @@
 
 .fontIRANSans-web {
   font-family: IRANSans-web !important;
+}
+
+.fontSahel {
+  font-family: Sahel !important;
+}
+
+
+.fs-14x {
+  font-size: 14px;
+}
+
+.fs-16x {
+  font-size: 16px;
 }
