--- a/styles/main.css
+++ b/styles/main.css
@@ -29,6 +29,24 @@
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
   font-weight: bold;
 }
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel.eot');
+  src: url('fonts/SahelFonts/Sahel.eot?#iefix') format('embedded-opentype'), url('fonts/SahelFonts/Sahel.woff') format('woff'), url('fonts/SahelFonts/Sahel.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel-Bold.eot');
+  src: url('fonts/SahelFonts/Sahel-Bold.eot?#iefix') format('embedded-opentype'), url('fonts/SahelFonts/Sahel-Bold.woff') format('woff'), url('fonts/SahelFonts/Sahel-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+@font-face {
+  font-family: Sahel;
+  src: url('fonts/SahelFonts/Sahel-Black.eot');
+  src: url('fonts/SahelFonts/Sahel-Black.eot?#iefix') format('embedded-opentype'), url('fonts/SahelFonts/Sahel-Black.woff') format('woff'), url('fonts/SahelFonts/Sahel-MedBlackium.ttf') format('truetype');
+  font-weight: 900;
+}
 .fontDroidArabicKufi {
   font-family: DroidArabicKufi !important;
 }
@@ -43,6 +61,15 @@
 }
 .fontIRANSans-web {
   font-family: IRANSans-web !important;
+}
+.fontSahel {
+  font-family: Sahel !important;
+}
+.fs-14x {
+  font-size: 14px;
+}
+.fs-16x {
+  font-size: 16px;
 }
 .scroll1::-webkit-scrollbar {
   width: 5px;
@@ -191,7 +218,7 @@ svg.tree {
   display: none;
 }
 * {
-  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Sahel, IRANSans-web, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 h1,
@@ -265,6 +292,9 @@ table.simple tbody td {
 }
 table.simple tbody td.label {
   text-align: left;
+  white-space: nowrap;
+}
+table.simple tbody td.nowrap {
   white-space: nowrap;
 }
 table.simple tbody tr {
@@ -603,7 +633,7 @@ md-dialog {
 }
 input.md-input,
 textarea.md-input {
-  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Sahel, IRANSans-web, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 ul.ivh-treeview {
