--- a/styles/main.less
+++ b/styles/main.less
@@ -7,7 +7,7 @@
 @table-border-color: #e9f3fb;
 
 * {
-  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Sahel, IRANSans-web, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
@@ -100,6 +100,10 @@ table.simple {
 
     td.label {
       text-align: left;
+      white-space: nowrap;
+    }
+
+    td.nowrap {
       white-space: nowrap;
     }
 
@@ -510,7 +514,7 @@ md-dialog {
 }
 
 input.md-input, textarea.md-input {
-  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Sahel, IRANSans-web, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
 
