--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -117,7 +117,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="p in clazz.properties" ng-class="{even: $even, odd: $odd}">
+                <tr ng-repeat="p in clazz.properties track by $index" ng-class="{even: $even, odd: $odd}">
                     <td>{{$index+1}}</td>
                     <td><a ui-sref="ontology.property({propertyUrl:p.url})">{{p.name}}</a></td>
                     <td><span>{{p.faLabel}}</span></td>
