--- a/templates/search/feedback.html
+++ b/templates/search/feedback.html
@@ -3,12 +3,12 @@
     <div layout-xs="column" layout-gt-md="row">
         <md-input-container>
             <label>textKeyword : </label>
-            <input type="text" ng-model="query.templateName"/>
+            <input type="text" ng-model="query.textKeyword"/>
         </md-input-container>
 
         <md-input-container>
             <label>queryKeyword : </label>
-            <input type="text" ng-model="query.className"/>
+            <input type="text" ng-model="query.queryKeyword"/>
         </md-input-container>
 
         <md-input-container>
