--- a/styles/main.less
+++ b/styles/main.less
@@ -539,3 +539,6 @@ ul.ivh-treeview .ivh-treeview-node-leaf .ivh-treeview-toggle {
   //padding: 0 5px;
 }
 
+[dir=rtl] ._md-datepicker-floating-label > md-persian-datepicker .md-datepicker-button {
+  float: left;
+}
