--- a/templates/search/feedback-item.html
+++ b/templates/search/feedback-item.html
@@ -24,7 +24,7 @@
                 </tr>
                 <tr>
                     <td class="label">زمان ارسال :</td>
-                    <td>{{item.sendTime | shamsiDate}}</td>
+                    <td>{{item.sendTime | shamsiDate | persianNumbers}}</td>
                 </tr>
                 <tr>
                     <td class="label">پرس و جو :</td>
