--- a/templates/search/feedback.html
+++ b/templates/search/feedback.html
@@ -2,42 +2,44 @@
 
     <div layout-xs="column" layout-gt-md="row">
         <md-input-container>
-            <label>textKeyword : </label>
-            <input type="text" ng-model="query.textKeyword"/>
-        </md-input-container>
-
-        <md-input-container>
-            <label>queryKeyword : </label>
+            <label>پرس و جو</label>
             <input type="text" ng-model="query.queryKeyword"/>
         </md-input-container>
 
         <md-input-container>
-            <label>از تاریخ : </label>
-            <md-datepicker ng-model="query.minSendDate" aria-label="از تاریخ"></md-datepicker>
+            <label>توضیحات</label>
+            <input type="text" ng-model="query.textKeyword"/>
         </md-input-container>
 
         <md-input-container>
-            <label>تا تاریخ : </label>
-            <md-datepicker ng-model="query.maxSendDate" aria-label="تا تاریخ"></md-datepicker>
+            <label>از تاریخ</label>
+            <!--<md-datepicker ng-model="query.minSendDate" aria-label="از تاریخ"></md-datepicker>-->
+            <md-persian-datepicker ng-model="query.minSendDate" aria-label="از تاریخ"></md-persian-datepicker>
+        </md-input-container>
+
+        <md-input-container>
+            <label>تا تاریخ</label>
+            <!--<md-datepicker ng-model="query.maxSendDate" aria-label="تا تاریخ"></md-datepicker>-->
+            <md-persian-datepicker ng-model="query.maxSendDate" aria-label="از تاریخ"></md-persian-datepicker>
         </md-input-container>
 
         <div layout="row">
             <md-input-container>
-            <label>approved</label>
-            <md-select ng-model="query.approved">
-                <md-option value=""><em>None</em></md-option>
-                <md-option value="true"><em>True</em></md-option>
-                <md-option value="false"><em>False</em></md-option>
-            </md-select>
+                <label>approved</label>
+                <md-select ng-model="query.approved">
+                    <md-option value=""><em>None</em></md-option>
+                    <md-option value="true"><em>True</em></md-option>
+                    <md-option value="false"><em>False</em></md-option>
+                </md-select>
             </md-input-container>
 
             <md-input-container>
-            <label>done</label>
-            <md-select ng-model="query.done">
-                <md-option value=""><em>None</em></md-option>
-                <md-option value="true"><em>True</em></md-option>
-                <md-option value="false"><em>False</em></md-option>
-            </md-select>
+                <label>done</label>
+                <md-select ng-model="query.done">
+                    <md-option value=""><em>None</em></md-option>
+                    <md-option value="true"><em>True</em></md-option>
+                    <md-option value="false"><em>False</em></md-option>
+                </md-select>
             </md-input-container>
         </div>
 
@@ -61,8 +63,8 @@
     <md-divider></md-divider>
     <div style="color: #888;padding-top: 10px;text-align: center;">
         صفحه
-        {{paging.current}}
-        از{{paging.pageCount}} - تعداد کل آیتم‌ها {{paging.totalSize}}
+        {{paging.current | persianNumbers}}
+        از{{paging.pageCount | persianNumbers}} - تعداد کل آیتم‌ها {{paging.totalSize | persianNumbers}}
     </div>
     <md-divider></md-divider>
 
@@ -81,11 +83,11 @@
         <tbody>
         <tr ng-repeat="item in items track by $index" ng-class="{even: $even, odd: $odd}" class="clickable"
             ng-click="showItem(item, $event);">
-            <td>{{(paging.pageIndex * paging.pageSize + $index)+1}}</td>
+            <td>{{(paging.pageIndex * paging.pageSize + $index)+1  | persianNumbers}}</td>
             <td>{{item.name}}</td>
             <td>{{item.query}}</td>
             <td>{{item.text.length<200 ? item.text : item.text.substring(0, 180)+'...'}}</td>
-            <td class="nowrap">{{item.sendTime | shamsiDate}}</td>
+            <td class="nowrap">{{item.sendTime | shamsiDate | persianNumbers}}</td>
             <td>{{item.approved}}</td>
             <td>{{item.done}}</td>
         </tr>
