اصلاح ذخیره خصیصه

--- a/templates/ontology/property.html
+++ b/templates/ontology/property.html
@@ -8,8 +8,11 @@
         </div>
 
         <div>
-            <h1>{{data.property.faLabel}}<a class="medium-text" style="margin: 0 5px;"
-                                       ui-sref="ontology.property-edit({propertyUrl:data.property.url})">(ویرایش)</a>
+            <h1>
+                {{data.property.faLabel}}
+                <a class="medium-text"
+                   style="margin: 0 5px;"
+                   ui-sref="ontology.property-edit({propertyUrl:data.property.url})">(ویرایش)</a>
             </h1>
         </div>
 
@@ -84,7 +87,8 @@
                             <a ui-sref="ontology.class({classUrl:d})">{{d}}</a>
                         </div>
                     </td>
-                </tr>                <tr>
+                </tr>
+                <tr>
                     <td class="left">
                         <h3>محدوده پیشنهادی : </h3>
                     </td>
