--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -5,12 +5,18 @@
 
         <md-input-container>
             <label>نام خصیصه :‌ </label>
-            <input type="text" ng-model="data.property.name"/>
+            <input type="text"
+                   required
+                   ng-model="data.property.name"
+                   ng-change="data.property.url='http://fkg.iust.ac.ir/ontology/'+data.property.name";/>
         </md-input-container>
 
         <md-input-container>
             <label>آدرس :‌ </label>
-            <input type="text" ng-model="data.property.url"/>
+            <input type="text"
+                   class="ltr left"
+                   ng-model="data.property.url"
+                   ng-change="data.property.wasDerivedFrom=data.property.url" />
         </md-input-container>
 
         <md-input-container>
@@ -65,7 +71,7 @@
 
         <md-input-container>
             <label>برگرفته شده از : </label>
-            <input type="text" ng-model="data.property.wasDerivedFrom"/>
+            <input type="text" ng-model="data.property.wasDerivedFrom" />
         </md-input-container>
     </div>
 
