--- a/styles/main.less
+++ b/styles/main.less
@@ -7,7 +7,7 @@
 @table-border-color: #e9f3fb;
 
 * {
-  font-family: Sahel, IRANSans-web, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Sahel;
   font-size: 14px;
 }
 
@@ -571,7 +571,7 @@ md-dialog {
 }
 
 input.md-input, textarea.md-input {
-  font-family: Sahel, IRANSans-web, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Sahel;
   font-size: 14px;
 }
 
