--- a/templates/reports/summaries.html
+++ b/templates/reports/summaries.html
@@ -59,7 +59,7 @@
             <th>#</th>
             <th>نام</th>
             <th>نام کاربری</th>
-            <th>تعداد</th>
+            <th>تعداد نظارت</th>
         </tr>
         </thead>
         <tbody>
