--- a/templates/reports/votes.html
+++ b/templates/reports/votes.html
@@ -59,7 +59,7 @@
             <th>#</th>
             <th>نام</th>
             <th>نام کاربری</th>
-            <th>رای</th>
+            <th>نوع رای</th>
             <th>تعداد</th>
         </tr>
         </thead>
