--- a/templates/reports/subjects.html
+++ b/templates/reports/subjects.html
@@ -57,8 +57,8 @@
         <thead>
         <tr>
             <th>#</th>
-            <th>id</th>
-            <th>تعداد</th>
+            <th>موجودیت</th>
+            <th>تعداد سه‌تایی</th>
         </tr>
         </thead>
         <tbody>
