make fields transform, unit autocomplete in templates edit http://194.225.227.161:8081/browse/KG-359 http://194.225.227.161:8081/browse/KG-360 and fix some bugs

--- a/styles/main.css
+++ b/styles/main.css
@@ -705,3 +705,6 @@ li.ivh-treeview-node {
 [dir=rtl] ._md-datepicker-floating-label > md-persian-datepicker .md-datepicker-button {
   float: left;
 }
+.md-virtual-repeat-container.md-autocomplete-suggestions-container {
+  direction: rtl;
+}
