--- a/templates/reports/triples.html
+++ b/templates/reports/triples.html
@@ -24,7 +24,8 @@
             <md-input-container>
                 <label>رای</label>
                 <md-select ng-model="query.vote">
-                    <md-option value=""><em>None</em></md-option>
+                    <md-option value=""><em></em></md-option>
+                    <md-option value="None"><em>None</em></md-option>
                     <md-option value="Reject"><em>Reject</em></md-option>
                     <md-option value="Approve"><em>Approve</em></md-option>
                     <md-option value="VIPReject"><em>VIPReject</em></md-option>
