--- a/styles/main.less
+++ b/styles/main.less
@@ -599,3 +599,8 @@ ul.ivh-treeview .ivh-treeview-node-leaf .ivh-treeview-toggle {
 [dir=rtl] ._md-datepicker-floating-label > md-persian-datepicker .md-datepicker-button {
   float: left;
 }
+
+.md-virtual-repeat-container.md-autocomplete-suggestions-container {
+  direction: rtl;
+}
+
