--- a/templates/reports/votes.html
+++ b/templates/reports/votes.html
@@ -53,27 +53,8 @@
     </div>
     <md-divider></md-divider>
 
-    <table class="simple" cellspacing="0" cellpadding="10">
-        <thead>
-        <tr>
-            <th>#</th>
-            <th>نام</th>
-            <th>نام کاربری</th>
-            <th>نوع رای</th>
-            <th>تعداد</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="item in items track by $index" ng-class="{even: $even, odd: $odd}" class="clickable"
-            ng-click="showItem(item, $event);">
-            <td>{{(paging.pageIndex * paging.pageSize + $index)+1  | persianNumbers}}</td>
-            <td>{{item.user.name}}</td>
-            <td>{{item.user.username}}</td>
-            <td>{{item.vote}}</td>
-            <td>{{item.count | persianNumbers}}</td>
-        </tr>
-        </tbody>
-    </table>
+    <div ng-include="'./templates/reports/votes-grid.html'"></div>
+
 </md-content>
 
 <md-content ng-show="err">
