fix report.triples convert links to <a> tag fix report tab titles

--- a/templates/reports/main.html
+++ b/templates/reports/main.html
@@ -4,8 +4,8 @@
         <md-tabs md-dynamic-height md-border-bottom md-selected="getSelectedTabIndex()">
             <md-tab ui-sref="reports.subjects" label="موجودیت"></md-tab>
             <md-tab ui-sref="reports.summaries" label="خلاصه"></md-tab>
-            <md-tab ui-sref="reports.votes" label="جامع"></md-tab>
-            <md-tab ui-sref="reports.triples" label="سه‌تایی‌ها"></md-tab>
+            <md-tab ui-sref="reports.votes" label="عملکرد جزئی خبرگان"></md-tab>
+            <md-tab ui-sref="reports.triples" label="سه‌تایی‌های نظارت شده"></md-tab>
         </md-tabs>
     </md-content>
 </div>
