--- a/templates/reports/triples.html
+++ b/templates/reports/triples.html
@@ -8,7 +8,7 @@
 
         <md-input-container>
             <label>سابجکت</label>
-            <input type="text" ng-model="query.subject"/>
+            <input type="text" ng-model="query.subject" style="width:350px;"/>
         </md-input-container>
 
         <div layout="row">
